@@ -293,8 +293,10 @@ class c_nntp_cache : public c_refcounted<c_nntp_cache>{
 		bool ismultiserver(void) const;
 		//int additem(ulong an,char *s,const char * a,time_t d, ulong b, ulong l){
 		int additem(c_nntp_header *h);
+		ulong flush(c_nntp_server_info *servinfo, c_nrange flushrange, c_mid_info *midinfo);
 		ulong flushlow(c_nntp_server_info *servinfo, ulong newlow, c_mid_info *midinfo);
 		void getxrange(c_nntp_server_info *servinfo, ulong newlow, ulong newhigh, c_nrange *range) const;
+		void getxrange(c_nntp_server_info *servinfo, c_nrange *range) const;
 		void getfiles(c_nntp_files_u *fc, c_mid_info *midinfo, const t_nntp_getinfo_list &getinfos);
 		c_nntp_cache(string path,c_group_info::ptr group,c_mid_info*midinfo);
 		virtual ~c_nntp_cache();
